# BannerlordDocker

./: Dockerfile  README.md
DXGIdetour/: CMakeLists.txt  README.md  main.cpp  main.def
